--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css" />
     <script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/jquery.viewportchecker.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjf8z4_Q5BqvtvcIt9swXGd448vGmp9Y4&callback=initMap"
@@ -39,7 +39,7 @@
     </div>
 </header>
 <!--MAIN PAGE-->
-<section class="extra-padding">
+<section class="logo-row  first-logo-padding">
     <div class="container">
         <div class="logo">
         <h1>Lorem ipsum dolor sit amet</h1>
@@ -68,7 +68,7 @@
     </div>
 </section>
 <!--PRICING-->
-<section>
+<section class="logo-row">
     <div class="container">
         <div class="logo">
             <h1>Lorem ipsum dolor sit amet</h1>
@@ -145,7 +145,7 @@
     </div>
 </section>
 <!--GALLERY-->
-<section>
+<section class="logo-row">
     <div class="container">
         <div class="logo">
             <h1>Lorem ipsum dolor sit amet</h1>
@@ -169,7 +169,7 @@
     </div>
 </section>
 <!--ABOUT-->
-<section>
+<section class="logo-row">
     <div class="container">
         <div class="logo">
             <h1>Lorem ipsum dolor sit amet</h1>
@@ -192,7 +192,7 @@
     </div>
 </section>
 <!--CONTACT-->
-<section>
+<section class="logo-row">
     <div class="container">
         <div class="logo">
             <h1>Lorem ipsum dolor sit amet</h1>
