--- a/home.html
+++ b/home.html
@@ -29,10 +29,9 @@
         <!--</div>-->
         <nav>
             <ul>
-                <li class="mainNav current">GŁÓWNA</li>
-                <li class="pricingNav">CENNIK</li>
+                <li class="mainNav">GŁÓWNA</li>
+                <li class="aboutNav">O SALONIE</li>
                 <li class="galleryNav">GALERIA</li>
-                <li class="aboutNav">O NAS</li>
                 <li class="contactNav">KONTAKT</li>
             </ul>
         </nav>
@@ -42,8 +41,7 @@
 <section class="logo-row  first-logo-padding">
     <div class="container">
         <div class="logo">
-        <h1>Lorem ipsum dolor sit amet</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloribus dolorum.</p>
+        <h1>Strzyżenie i pielęgnacja psów Małgorzata Wasilewska</h1>
         </div>
     </div>
 </section>
@@ -59,97 +57,57 @@
         </div>
         <div id="facts">
             <p class="fact">Większość psów nie jest zachwycona czesaniem, przycinaniem pazurów, czy kąpielą. Najlepszym sposobem, aby pies przyzwyczaił się do niezbędnych zabiegów pielęgnacyjnych, jest wczesne rozpoczęcie i regularne wyciąganie szczotki lub obcinacza do pazurów.</p>
-            <p class="fact">Psy są zwierzętami chodzącymi na opuszkach palców. Zbyt długie pazury mogą utrudniać chodzenie, a nawet doprowadzać do uszkodzenia opuszek, co powoduje kulawiznę.
-            </p>
+            <p class="fact">Psy są zwierzętami chodzącymi na opuszkach palców. Zbyt długie pazury mogą utrudniać chodzenie, a nawet doprowadzać do uszkodzenia opuszek, co powoduje kulawiznę.</p>
             <p class="fact">Plątanie się i kołtunienie dotyczy wszystkich psów o średniej i długiej sierści. Wynika to z nieprawidłowej pielęgnacji lub jej braku. Rozczesywanie takich supłów jest szczególnie pracochłonne, ponieważ włos należy rozczesać na całej jego długości.</p>
             <p class="fact">Pies powinien być groomowany co 4 do 8 tygodni:<br>co 6-8 tygodni w przypadku krótkiej sierści,<br>co 4-6 tygodni w przypadku średniej,<br> nawet 4 razy w tygodniu w przypadku długiej, łatwo plączącej się sierści.</p>
             <p class="fact">Zbyt częste kąpiele mogą doprowadzić do pozbawienia sierści jej naturalnego natłuszczenia, które odpowiada za utrzymanie mocnej, nawilżonej i błyszczącej sierści. Zaleca się kąpanie psa 1-2 razy w miesiącu.</p>
         </div>
     </div>
 </section>
-<!--PRICING-->
+<!--ABOUT-->
 <section class="logo-row">
     <div class="container">
         <div class="logo">
-            <h1>Lorem ipsum dolor sit amet</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloribus dolorum.</p>
+            <h1>O salonie</h1>
         </div>
     </div>
 </section>
 
-<section class="pricing">
+<section id="about" class="gallery">
     <div class="container">
-        <div class="description">
-            <p>Podane ceny mają charakter orientacyjny, cena końcowa jest ustalana indywidualnie w zależności od:</p>
-            <br>
+        <div class="text">
+            <h1>Witam</h1>
+            <p>
+                Jestem dyplomowanym groomerem z wieloletnim doświadczeniem. Zdobyte umiejętności zawdzięczam kursowi groomingu organizowanym przez Polską szkołę PSI SALON w Łodzi u Pani Ewy Grabowskiej.
+                Strzyżenie i pielęgnacja psów nie jest tylko moją pracą ale i przyjemnością.
+            </p>
+                <br>
+            <h2>Usługi, które oferuje, to:</h2>
             <ul>
-                <li>stanu okrywy włosowej,</li>
-                <li>wielkości,</li>
-                <li>usposobienia/zachowania.</li>
+                <li>kąpiel,</li>
+                <li>strzyżenie,</li>
+                <li>trymowanie,</li>
+                <li>rozczesywanie w miarę luźnych i niezdredowanych kołtunów,</li>
+                <li>obcinanie pazurów,</li>
+                <li>czyszczenie uszu.</li>
             </ul>
             <br>
-            <p>Ceny dotyczą kompletnej usługi i obejmują:  czesanie,  kąpiel,  wyciskanie gruczołów,  suszenie, strzyżenie/ trymowanie,  obcinanie pazurów  i  usuwanie włosów z kanałów słuchowych.</p>
+            <p>
+                Serdecznie zapraszam do korzystania z moich usług.
+            W celu uzyskania szczegółowych informacji proszę o kontakt telefoniczny: <span class=bold>608 414 412</span>
+            </p>
         </div>
-        <div id="services">
-            <table>
-                <tr>
-                    <th>Zabieg</th>
-                    <th>Cena</th>
-                </tr>
-                <tr>
-                    <td>Kąpiel z suszeniem	</td>
-                    <td>100</td>
-                </tr>
-                <tr>
-                    <td>Obcinanie pazurów	</td>
-                    <td>10</td>
-                </tr>
-                <tr>
-                    <td>Rozczesywanie skołtunionej sierści	</td>
-                    <td>50/h</td>
-                </tr>
-                <tr>
-                    <td>Springer Spaniel Angielski, Cocker Spaniel Angielski, Seter	</td>
-                    <td>200</td>
-                </tr>
-                <tr>
-                    <td>Mops, Buldożek Francuski, Jamnik krótkowłosy	</td>
-                    <td>100</td>
-                </tr>
-                <tr>
-                    <td>Berneński Pies Pasterski, Golden Retriever, Owczarek Niemiecki, Flat Coated Retriever, Labrador, Owczarek Australijski, Owczarek Szkocki, Owczarek Belgijski, Samojed, Husky, Czarny Terier Rosyjski, Sznaucer Olbrzym, Nowofundland, Lagotto Romagnolo, Barbet, Briard, PON, Bearded Collie, Shiba Inu, Akita Inu, Leonberger, Landseer	</td>
-                    <td>100</td>
-                </tr>
-                <tr>
-                    <td>Yorkshire Terrier, Maltańczyk, Hawańczyk, Pomeranian	</td>
-                    <td>150</td>
-                </tr>
-                <tr>
-                    <td>Shih Tzu, Lhasa Apso, Coton de Tulear	</td>
-                    <td>150</td>
-                </tr>
-                <tr>
-                    <td>Cavalier King Charles Spaniel	</td>
-                    <td>100</td>
-                </tr>
-            </table>
-        </div>
-        <!--<div id="calculator">-->
-        <!--<label><input type="checkbox" class="option" value="50" />11111<br></label>-->
-        <!--<label><input type="checkbox" class="option" value="100" />22222<br></label>-->
-        <!--<label><input type="checkbox" class="option" value="150" />33333<br></label>-->
-        <!--<label><input type="checkbox" class="option" value="200" />44444<br></label>-->
-        <!--<label><input type="checkbox" class="option" value="250" />55555<br></label>-->
-        <!--<div id="total">0</div>-->
-        <!--</div>-->
+        <div id=certificate>
+        <a href="img/certificate.png" data-lightbox="gallery" data-title="tytul" class="contact-img"><img src="img/certificate.png"></a>
+        <a href="img/diploma.png" data-lightbox="gallery" data-title="tytul" class="contact-img"><img src="img/diploma.png"></a>
+      </div>
     </div>
 </section>
 <!--GALLERY-->
-<section class="logo-row">
+<section class="logo-row galleryScroll">
     <div class="container">
         <div class="logo">
-            <h1>Lorem ipsum dolor sit amet</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloribus dolorum.</p>
+            <h1>Galeria</h1>
         </div>
     </div>
 </section>
@@ -168,35 +126,12 @@
         <a href="img/gallery/dog10.jpg" data-lightbox="gallery" data-title="tytul"><img src="img/gallery/dog10-sml.png"></a>
     </div>
 </section>
-<!--ABOUT-->
-<section class="logo-row">
-    <div class="container">
-        <div class="logo">
-            <h1>Lorem ipsum dolor sit amet</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloribus dolorum.</p>
-        </div>
-    </div>
-</section>
 
-<section id="about">
-    <div class="container">
-        <div class="text">
-            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </h1>
-            <p>Ad atque doloribus ipsa nihil non odit officiis, optio rerum similique sit, tempora velit vitae? Atque in labore nobis porro sunt? Ut.</p>
-        </div>
-        <div>
-            <img>
-            <img>
-            <img>
-        </div>
-    </div>
-</section>
 <!--CONTACT-->
 <section class="logo-row">
     <div class="container">
         <div class="logo">
-            <h1>Lorem ipsum dolor sit amet</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloribus dolorum.</p>
+            <h1>Kontakt</h1>
         </div>
     </div>
 </section>
@@ -204,8 +139,8 @@
 <section id="contact" class="gallery">
     <div class="container">
         <p>W celu rezerwacji proszę o kontakt telefoniczny:</p>
-        <p class="wobble"><span class="bold">123 123 123</span></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloribus dolorum.</p>
+        <p class="wobble"><span class="bold">608 414 423</span></p>
+        <p>Salon znajduje się w Wysokiem Mazowieckiem przy ulicy Sienkiewicza 14.<br>Dokładniejsza lokalizacja poniżej:</p>
         <a href="img/foto-map.png" data-lightbox="gallery" data-title="tytul" class="contact-img"><img src="img/foto-map.png"></a>
         <a href="img/house-view.png" data-lightbox="gallery" data-title="tytul" class="contact-img"><img src="img/house-view.png"></a>
     </div>
@@ -214,25 +149,22 @@
 <!--BOTTOM NAV-->
 <section id="boxes">
     <div class="container">
-        <a class="pricingNav">
-            <div class="box">
-                <img src="img/random_logo.png">
-                <h3>Cennik</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </div>
-        </a>
         <a class="galleryNav">
             <div class="box">
-                <img src="img/random_logo.png">
+                <img src="img/gallery_icon.png">
                 <h3>Galeria</h3>
-                <p>Animi aspernatur autem, corporis cum dignissimos, dolor dolorum ea</p>
             </div>
         </a>
         <a class="aboutNav">
             <div class="box">
-                <img src="img/random_logo.png">
-                <h3>O nas</h3>
-                <p>enim et excepturi molestiae natus omnis perferendis quo </p>
+                <img src="img/about_icon.png">
+                <h3>O salonie</h3>
+            </div>
+        </a>
+        <a class="contactNav">
+            <div class="box">
+                <img src="img/contact_icon.png">
+                <h3>Kontakt</h3>
             </div>
         </a>
     </div>
@@ -244,8 +176,8 @@
         </div>
         <div id="quickInfo">
             <ul>
-                <li>ulica<br>kod pocztowy, miasto</li>
-                <li>123 123 123</li>
+                <li>18-200, Wysokie Mazowieckie<br>Sienkiewicza 14</li>
+                <li>608 414 423</li>
                 <li>Możliwość umówienia wizyty na dogodną godzinę</li>
             </ul>
         </div>
@@ -254,4 +186,3 @@
 
 </body>
 </html>
-
