--- a/home.html
+++ b/home.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Strzyżenie psów Małgorzata Wasilewska, Wysokie Mazowieckie">
+    <meta name="keywords" content="strzyzenie,psow,wysokie,mazowieckie,malgorzata,wasilewska,grooming">
+    <meta name="author" content="Hubert Wasilewski">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Strzyzenie</title>
     <link rel="stylesheet" href="css/style.css">
